crates/turborepo/tests/snapshots/passthrough_args_test__passthrough_filter_hello.snap
---
source: crates/turborepo/tests/passthrough_args_test.rs
expression: stdout.to_string()
---
   • Packages in scope: my-app
   • Running echo in 1 packages
   • Remote caching disabled

my-app:echo: cache miss, executing c0813f759149b8af
my-app:echo: 
my-app:echo: > echo
my-app:echo: > echo hello
my-app:echo: 
my-app:echo: hello

 Tasks:    1 successful, 1 total
Cached:    0 cached, 1 total
  Time:    [TIME]
